manifests/deployment-hash.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hash
  # namespace: ns-sideproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hash
  template:
    metadata:
      labels:
        app: hash
    spec:
      volumes: 
        - name: shared-hash
        #   emptyDir: {}
          persistentVolumeClaim:
            claimName: pv-claim
      containers:
        - name: hashfind
          image: 4925k/hashfind:v1
          volumeMounts:
            - name: shared-hash
              mountPath: /usr/src/app/files
        - name: hash-gen
          image: 4925k/hash-gen:v1
          volumeMounts:
            - name: shared-hash
              mountPath: /usr/src/app/files
