manifests/deployment-pingpong.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong
  namespace: ns-sideproject
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      volumes:
        - name: shared-vol
          persistentVolumeClaim:
            claimName: pv-claim
      containers:
        - name: pingpong
          image: 4925k/pingpong:v1
          volumeMounts:
            - name: shared-vol
              mountPath: /usr/src/app/files
