manifests/service-pingpong.yaml
apiVersion: v1
kind: Service
metadata:
  name: pingpong
spec: 
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - port: 2347
      protocol: TCP
      targetPort: 4445
