manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hash-ingress
spec:
  rules:
  - http:
      paths:
      - path: /hash/status
        pathType: Prefix
        backend:
          service:
            name: hash
            port:
              number: 2346
      - path: /pingpong
        pathType: Prefix
        backend:
          service:
            name: pingpong
            port: 
              number: 2347
      - path: /
        pathType: Prefix
        backend:
          service:
            name: images-svc
            port:
              number: 2344
